전체 컨텐츠 정렬 수정 중

--- a/assets/01-html/02-blockInline/01-block_element.html
+++ b/assets/01-html/02-blockInline/01-block_element.html
@@ -49,7 +49,7 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/02-blockInline/2.1.block_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/02-blockInline/2.1.block_element.html">
 		<h2 class="ve_tit">block 요소의 기본 구조</h2>
 
 		<div class="uk_gist_code_box indent mt_m" data-tit="block elements">
