--- a/assets/01-html/03-sections/01-header_element.html
+++ b/assets/01-html/03-sections/01-header_element.html
@@ -13,7 +13,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_xl">
+	<section class="view_editor ex_code mt_xxl">
 		<h2 class="ve_tit">예제</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="header element">
