--- a/assets/01-html/03-sections/02-heading_element.html
+++ b/assets/01-html/03-sections/02-heading_element.html
@@ -16,7 +16,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor edit_code mt_xl">
+	<section class="view_editor edit_code mt_xxl">
 		<h2 class="ve_tit">예제</h2>
 		<div class="view_editor edit_code indent" data-target="html/03-sections/3.2.heading_element1.html">
 			<div class="uk_editor min-height-450" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
