--- a/assets/01-html/03-sections/06-footer_element.html
+++ b/assets/01-html/03-sections/06-footer_element.html
@@ -14,7 +14,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/03-sections/3.6.footer_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/03-sections/3.6.footer_element.html">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="footer element">
 			<textarea readonly="readonly">
