--- a/assets/01-html/04-grouping/01-main_element.html
+++ b/assets/01-html/04-grouping/01-main_element.html
@@ -22,7 +22,7 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_xl">
+	<section class="view_editor ex_code mt_xxl">
 		<h2 class="ve_tit">main 요소를 하나 이상 사용할 때 올바른 예</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
@@ -65,7 +65,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor ex_code ex_wrong mt_xl" data-target="html/04-grouping/4.1.main_element/4.1.main_element4.html">
+	<section class="view_editor ex_code ex_wrong mt_xxl" data-target="html/04-grouping/4.1.main_element/4.1.main_element4.html">
 		<h2 class="ve_tit">main 요소를 하나 이상 사용할 때 잘못된 예</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
 			<textarea readonly="readonly">
