--- a/assets/01-html/04-grouping/02-p_element.html
+++ b/assets/01-html/04-grouping/02-p_element.html
@@ -36,7 +36,7 @@
 		</ol>
 	</section>
 
-	<section class="ex_code view_editor mt_xl">
+	<section class="ex_code view_editor mt_xxl">
 		<h2 class="ve_tit">예제</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="p element">
