--- a/assets/01-html/04-grouping/03-ol_element.html
+++ b/assets/01-html/04-grouping/03-ol_element.html
@@ -14,7 +14,7 @@
 		</p>
 	</section>
 
-	<section class="txt_ex mt_xl">
+	<section class="txt_ex mt_xxl">
 		<h2>4.3.1. ol(ordered list) 속성</h2>
 		<!--<h2>ol(ordered list) 속성</h2>-->
 
