--- a/assets/01-html/04-grouping/04-ul_element.html
+++ b/assets/01-html/04-grouping/04-ul_element.html
@@ -10,7 +10,7 @@
 		<p>순서가 없는 목록(숫자 순서를 가지고 있지 않은)을 나타냅니다. 일반적으로, 순서가 없는 목록은 굵은 점과 함께 표시됩니다.</p>
 	</section>
 
-	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.4.ul_element/4.4.ul_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.4.ul_element/4.4.ul_element.html">
 		<h2 class="ve_tit">기본 리스트 / 중첩 리스트</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
