--- a/assets/01-html/04-grouping/09-address_element.html
+++ b/assets/01-html/04-grouping/09-address_element.html
@@ -13,7 +13,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.9.address_element/4.9.address_element1.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.9.address_element/4.9.address_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="address element">
 			<textarea readonly="readonly">
@@ -30,7 +30,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.9.address_element/4.9.address_element2.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.9.address_element/4.9.address_element2.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
