--- a/assets/01-html/04-grouping/10-figure_element.html
+++ b/assets/01-html/04-grouping/10-figure_element.html
@@ -25,7 +25,7 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element1.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element1.html">
 		<h2 class="ve_tit">이미지 삽입</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element Insert image">
 			<textarea readonly="readonly">
@@ -41,7 +41,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element2.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element2.html">
 		<h2 class="ve_tit">코드 삽입</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element Insert code">
 			<textarea readonly="readonly">
@@ -64,7 +64,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element3.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element3.html">
 		<h2 class="ve_tit">인용문 삽입</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element Insert citation">
 			<textarea readonly="readonly">
@@ -79,7 +79,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element4.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.10.figure_element/4.10.figure_element4.html">
 		<h2 class="ve_tit">중첩</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="figure element nesting">
 			<textarea readonly="readonly">
