--- a/assets/01-html/08-table/03-colgroup_element.html
+++ b/assets/01-html/08-table/03-colgroup_element.html
@@ -13,7 +13,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/08-table/8.3.colgroup_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/08-table/8.3.colgroup_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="colgroup element">
 			<textarea readonly="readonly">
@@ -29,7 +29,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="colgroup">
+	<aside class="browser_support mt_xxl" data-tit="colgroup">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
