--- a/assets/01-html/08-table/04-col_element.html
+++ b/assets/01-html/08-table/04-col_element.html
@@ -14,7 +14,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/08-table/8.4.colgroup_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/08-table/8.4.colgroup_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="col element">
 			<textarea readonly="readonly">
@@ -30,7 +30,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="col">
+	<aside class="browser_support mt_xxl" data-tit="col">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
