--- a/assets/01-html/08-table/10-td_element.html
+++ b/assets/01-html/08-table/10-td_element.html
@@ -8,13 +8,9 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;td&gt;</code> 태그는 HTML 테이블에서 하나의 데이터 셀(data cell)을 정의할 때 사용합니다.
-		</p>
-		<p class="mt_s">
+			<code>&lt;td&gt;</code> 태그는 HTML 테이블에서 하나의 데이터 셀(data cell)을 정의할 때 사용합니다.<br>
 			HTML 테이블를 구성하는 셀(cell)은 두 종류로 구분할 수 있으며,
-			하나는 <code>&lt;th&gt;</code> 요소를 사용한 헤더 정보를 저장하는 헤더 셀과 또 다른 하나는 <code>&lt;td&gt;</code> 요소를 사용한 일반적인 데이터를 저장하는 데이터 셀입니다.
-		</p>
-		<p class="mt_s">
+			하나는 <code>&lt;th&gt;</code> 요소를 사용한 헤더 정보를 저장하는 헤더 셀과 또 다른 하나는 <code>&lt;td&gt;</code> 요소를 사용한 일반적인 데이터를 저장하는 데이터 셀입니다.<br>
 			<code>&lt;th&gt;</code> 요소 내의 텍스트는 기본적으로 굵은 폰트로 중앙 정렬되며,
 			<code>&lt;td&gt;</code> 요소 내의 텍스트는 일반적인 두께의 폰트로 좌측 정렬됩니다.
 		</p>
@@ -24,7 +20,7 @@
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;td&gt;</code> 요소의 abbr, align, axis, bgcolor, char, charoff, height, nowrap, scope, valign, width 속성을 더 이상 지원하지 않습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="td element CSS default">
 				<textarea readonly="readonly">
@@ -66,21 +62,21 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.10.td_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/08-table/8.10.td_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.10.td_element_aria.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/08-table/8.10.td_element_aria.html">
 		<h2 class="ve_tit">ARIA(Accessible Rich Internet Applications)를 활용한 table 예시</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="td">
+	<aside class="browser_support mt_xxl" data-tit="td">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
