--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -15,7 +15,7 @@
 			accept 속성은 HTML5에서 제거되고 더 이상 사용되서는 안됩니다. 대신에, <code>&lt;input&gt;</code> 요소의 accept 속성을 사용하세요.<br>
 			XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="form element CSS default">
 				<textarea readonly="readonly">
@@ -279,21 +279,21 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.1.form_element_simple.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.1.form_element_simple.html">
 		<h2 class="ve_tit">예제1</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.1.form_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.1.form_element.html">
 		<h2 class="ve_tit">예제2</h2>
 		<div  class="uk_editor indent min-height-750" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="form">
+	<aside class="browser_support mt_xxl" data-tit="form">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
