--- a/assets/01-html/09-forms/02-label_element.html
+++ b/assets/01-html/09-forms/02-label_element.html
@@ -18,18 +18,18 @@
 		<p class="mt_s">
 			<code>&lt;label&gt;</code> 요소를 사용할 수 있는 요소는 다음과 같습니다.<br>
 			<code>&lt;input&gt;</code>, <code>&lt;meter&gt;</code>, <code>&lt;output&gt;</code>, <code>&lt;progress&gt;</code>, <code>&lt;select&gt;</code>, <code>&lt;textarea&gt;</code>
-			<code>&lt;button&gt;</code> 요소, <code>&lt;input&gt;</code> type 속성이 button, submit, image, hidden, reset인 경우은 제외.
+			<code>&lt;button&gt;</code> 요소, <code>&lt;input&gt;</code> type 속성이 <code>button</code>, <code>submit</code>, <code>image</code>, <code>hidden</code>, <code>reset</code>인 경우은 제외.
 		</p>
 		<p class="mt_s">
-			label 요소에 대한 코드 작성 방식에는 명시적(explicit)과 암시적(implicit)으로 분류됩니다.<br>
-			명시적 방식은 label 의 for 속성과 input 의 id 속성을 명시함으로써, 연결해주는 방식을 의미합니다.<br>
-			암시적 방식은 label 요소 안에 input 요소를 넣음으로써, for 속성을 명시하지않더라도 암묵적으로 연결하는 방식입니다.<br>
-			레이블 자체가 폼과 직접적으로 연결되어 있는 것은 아닙니다. 레이블과 폼은 맥락상 간접적인 제어를 통하여 연결됩니다.
+			<code>&lt;label&gt;</code> 요소에 대한 코드 작성 방식에는 명시적(explicit)과 암시적(implicit)으로 분류됩니다.<br>
+			명시적 방식은 <code>&lt;label&gt;</code> 의 <code>for</code> 속성과 <code>&lt;input&gt;</code> 의 <code>id</code> 속성을 명시함으로써, 연결해주는 방식을 의미합니다.<br>
+			암시적 방식은 <code>&lt;label&gt;</code> 요소 안에 <code>&lt;input&gt;</code> 요소를 넣음으로써, <code>for</code> 속성을 명시하지않더라도 암묵적으로 연결하는 방식입니다.<br>
+			<code>&lt;label&gt;</code> 자체가 폼과 직접적으로 연결되어 있는 것은 아닙니다. 레이블과 폼은 맥락상 간접적인 제어를 통하여 연결됩니다.
 		</p>
 		<p class="mt_s">
-			HTML5에서는 <code>&lt;label&gt;</code> 요소에 form 속성이 새롭게 추가되었으나, 2016년 4월 28일 부로 HTML 표준서에서 제거되었습니다.
+			HTML5에서는 <code>&lt;label&gt;</code> 요소에 <code>form</code> 속성이 새롭게 추가되었으나, 2016년 4월 28일 부로 HTML 표준서에서 제거되었습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="label element CSS default">
 				<textarea readonly="readonly">
@@ -52,21 +52,21 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.2.label_element1.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.2.label_element1.html">
 		<h2 class="ve_tit">예제1</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.2.label_element2.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.2.label_element2.html">
 		<h2 class="ve_tit">예제2</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="td">
+	<aside class="browser_support mt_xxl" data-tit="td">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
