--- a/assets/01-html/09-forms/03-input_element_part2.html
+++ b/assets/01-html/09-forms/03-input_element_part2.html
@@ -39,7 +39,7 @@
 		<!-- name -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;input name="요소의 이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.<br>
 				name 속성은 <code>&lt;input&gt;</code> 요소에서 가장 중요한 속성일 것입니다.<br>
@@ -56,7 +56,7 @@
 					<input name="name" id="name">
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="name">
+			<aside class="browser_support mt_m" data-tit="name">
 				<p class="ie">1.0</p>
 				<p class="edge">2.0</p>
 				<p class="chrome">1.0</p>
@@ -69,7 +69,7 @@
 		<!-- value -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;input value="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				입력 필드의 초기값 또는 기본 선택을 명시합니다.<br>
 				value 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값에 따라 다른 용도로 사용됩니다.<br>
 				&quot;button&quot;, &quot;reset&quot;, &quot;submit&quot; : 버튼 내의 텍스트를 정의합니다.<br>
@@ -77,12 +77,12 @@
 				&quot;checkbox&quot;, &quot;image&quot;, &quot;radio&quot; : 해당 입력 필드를 선택 시 서버로 제출되는 값을 정의합니다.<br>
 				또한, &lt;input&gt; 요소의 type 속성값이 &quot;file&quot;인 경우에는 value 속성을 사용할 수 없습니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_value.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_value.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="value">
+			<aside class="browser_support mt_m" data-tit="value">
 				<p class="ie">2.0</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -104,12 +104,12 @@
 				XHTML에서는 속성값을 생략할 수 없으므로, 다음과 같이 속성명과 속성값을 모두 명시해야만 합니다.<br>
 				XHTML에서는 <code>&lt;input checked=&quot;checked&quot; /&gt;</code>, HTML5에서는 <code>&lt;input checked&gt;</code>속성으로 정의되어야 합니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_checked.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_checked.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="checked">
+			<aside class="browser_support mt_m" data-tit="checked">
 				<p class="ie">2.0</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -132,12 +132,12 @@
 				disabled 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_disabled.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_disabled.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="disabled">
+			<aside class="browser_support mt_m" data-tit="disabled">
 				<p class="ie">6+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -160,12 +160,12 @@
 				readonly 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_readonly.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_readonly.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="readonly">
+			<aside class="browser_support mt_m" data-tit="readonly">
 				<p class="ie">6+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -184,12 +184,12 @@
 				size 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				email, password, search, tel, text, url
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_size.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_size.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="size">
+			<aside class="browser_support mt_m" data-tit="size">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -209,12 +209,12 @@
 			<p class="mt_s">
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;image&quot;인 경우에만 사용할 수 있습니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_src.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_src.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="src">
+			<aside class="browser_support mt_m" data-tit="src">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">지원</p>
@@ -234,12 +234,12 @@
 			<p class="mt_s">
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 <code>&quot;image&quot;</code>인 경우에만 사용할 수 있습니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_alt.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_alt.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="alt">
+			<aside class="browser_support mt_m" data-tit="alt">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">지원</p>
@@ -258,12 +258,12 @@
 				placeholder 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				email, password, search, tel, text, url
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_placeholder.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_placeholder.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="placeholder">
+			<aside class="browser_support mt_m" data-tit="placeholder">
 				<p class="ie">10+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">10.0</p>
@@ -285,12 +285,12 @@
 				required 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_required.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_required.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="required">
+			<aside class="browser_support mt_m" data-tit="required">
 				<p class="ie">10+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">10.0</p>
@@ -311,12 +311,12 @@
 				이 속성들이 명시되어 있지 않으면 브라우저는 이미지의 크기를 알 수 없어 필요한 공간을 남겨둘 수 없게 됩니다.<br>
 				따라서 이미지가 로딩되는 순간 페이지의 레이아웃이 비정상적으로 출력되는 결과를 초래할 수 있습니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_width&height.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_width&height.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="width, height">
+			<aside class="browser_support mt_m" data-tit="width, height">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -360,12 +360,12 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_accept.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_accept.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="accept">
+			<aside class="browser_support mt_m" data-tit="accept">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">1.0</p>
@@ -418,12 +418,12 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_accesskey.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_accesskey.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="accesskey">
+			<aside class="browser_support mt_m" data-tit="accesskey">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">지원</p>
@@ -455,12 +455,12 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_autocomplete.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_autocomplete.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="autocomplete">
+			<aside class="browser_support mt_m" data-tit="autocomplete">
 				<p class="ie">5+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">17.0</p>
