--- a/assets/01-html/09-forms/04-button_element.html
+++ b/assets/01-html/09-forms/04-button_element.html
@@ -29,9 +29,9 @@
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;button type="button | submit | reset"&gt;버튼명&lt;/button&gt;</span></h3>
 			<p class="mt_s">
 				해당 버튼의 이름(name)을 명시합니다.<br>
-				기본적으로 button, reset, submit의 값들이 있습니다.
+				기본적으로 <code>button</code>, <code>reset</code>, <code>submit</code>의 값들이 있습니다.
 			</p>
-			<div class="ol_lst indent mt_s">
+			<div class="ol_lst indent mt_ms">
 				<h4 class="ml_mn">type 속성에 사용되는 값은 다음과 같습니다.</h4>
 				<ol>
 					<li class="line_code font14 mt_s">
@@ -53,19 +53,19 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name], [value], [disabled] <span class="t_blue">&lt;button name="해당 버튼의 이름(name)" value="텍스트" disabled&gt;버튼명&lt;/button&gt;</span></h3>
 			<p class="mt_s">
-				input name, value, disabled 요소의 속성과 동일합니다.
+				<code>&lt;input&gt;</code>의 <code>name</code>, <code>value</code>, <code>disabled</code> 요소의 속성과 동일합니다.
 			</p>
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.4.button_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.4.button_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="button">
+	<aside class="browser_support mt_xxl" data-tit="button">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
