--- a/assets/01-html/09-forms/05-select_element.html
+++ b/assets/01-html/09-forms/05-select_element.html
@@ -31,7 +31,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="name">
+			<aside class="browser_support mt_m" data-tit="name">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -55,7 +55,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="size">
+			<aside class="browser_support mt_m" data-tit="size">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -83,7 +83,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="disabled">
+			<aside class="browser_support mt_m" data-tit="disabled">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -110,7 +110,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="multiple">
+			<aside class="browser_support mt_m" data-tit="multiple">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -139,7 +139,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="autofocus">
+			<aside class="browser_support mt_m" data-tit="autofocus">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -173,7 +173,7 @@
 					</select>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="form">
+			<aside class="browser_support mt_m" data-tit="form">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -208,7 +208,7 @@
 					</select>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="required">
+			<aside class="browser_support mt_m" data-tit="required">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
