--- a/assets/01-html/09-forms/06-optgroup_element.html
+++ b/assets/01-html/09-forms/06-optgroup_element.html
@@ -32,7 +32,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="disabled">
+			<aside class="browser_support mt_m" data-tit="disabled">
 				<ul>
 					<li class="ie">8+</li>
 					<li class="edge">지원</li>
@@ -55,7 +55,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="label">
+			<aside class="browser_support mt_m" data-tit="label">
 				<ul>
 					<li class="ie">5.5+</li>
 					<li class="edge">지원</li>
