--- a/assets/01-html/09-forms/08-datalist_element.html
+++ b/assets/01-html/09-forms/08-datalist_element.html
@@ -17,7 +17,7 @@
 			이 요소는 전역 특성만 포함합니다.<br>
 			<code>&lt;datalist&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="datalist element CSS default">
 				<textarea readonly="readonly">
@@ -29,7 +29,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.8.datalist_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.8.datalist_element.html">
 		<h3 class="ve_tit">예제</h3>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
