--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -66,7 +66,6 @@
 			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [name] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea name=&quot;ukform&quot;&gt;&lt;/textarea&gt;
-
 				</textarea>
 			</div>
 		</article>
@@ -126,7 +125,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="placeholder">
+			<aside class="browser_support mt_m" data-tit="placeholder">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -155,10 +154,9 @@
 
 					<!-- XHTML -->
 					&lt;textarea autofocus=&quot;autofocus&quot;&gt;&lt;/textarea&gt;
-
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="autofocus">
+			<aside class="browser_support mt_m" data-tit="autofocus">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -181,10 +179,9 @@
 			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [dirname] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea dirname=&quot;intro.dir&quot;&gt;&lt;/textarea&gt;
-
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="dirname">
+			<aside class="browser_support mt_m" data-tit="dirname">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -206,10 +203,9 @@
 			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [form] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea form=&quot;myForm&quot;&gt;&lt;/textarea&gt;
-
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="form">
+			<aside class="browser_support mt_m" data-tit="form">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -232,7 +228,7 @@
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="maxlength">
+			<aside class="browser_support mt_m" data-tit="maxlength">
 				<ul>
 					<li class="ie">10+</li>
 					<li class="edge">지원</li>
@@ -282,7 +278,6 @@
 			<div class="uk_gist_code_box mt_ms" data-tit="textarea element [wrap] attribute">
 				<textarea readonly="readonly">
 					&lt;textarea wrap=&quot;hard&quot;&gt;&lt;/textarea&gt;
-
 				</textarea>
 			</div>
 		</article>
