--- a/assets/01-html/09-forms/10-output_element.html
+++ b/assets/01-html/09-forms/10-output_element.html
@@ -14,7 +14,7 @@
 			<code>&lt;output&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
 			Internet Explorer는 지원하지 않습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="output element CSS default">
 				<textarea readonly="readonly">
