--- a/assets/01-html/09-forms/13-fieldset_element.html
+++ b/assets/01-html/09-forms/13-fieldset_element.html
@@ -15,7 +15,7 @@
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;fieldset&gt;</code> 요소에 새로운 속성들이 추가되었습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="fieldset element CSS default">
 				<textarea readonly="readonly">
@@ -94,7 +94,7 @@
 		</article>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="fieldset">
+	<aside class="browser_support mt_xxl" data-tit="fieldset">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
