--- a/assets/01-html/09-forms/14-legend_element.html
+++ b/assets/01-html/09-forms/14-legend_element.html
@@ -12,7 +12,7 @@
 			HTML5에서는 <code>&lt;legend&gt;</code> 요소의 align 속성을 더 이상 지원하지 않습니다.
 		</p>
 
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="legend element CSS default">
 				<textarea readonly="readonly">
@@ -26,14 +26,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.14.legend_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.14.legend_element.html">
 		<h3 class="ve_tit">예제</h3>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="legend">
+	<aside class="browser_support mt_xxl" data-tit="legend">
 		<ul>
 			<li class="ie">6+</li>
 			<li class="edge">지원</li>
