--- a/assets/01-html/10-structure/01-html4_document.html
+++ b/assets/01-html/10-structure/01-html4_document.html
@@ -17,48 +17,50 @@
 		</p>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.1.html4_document_layout.html">
-		<h3 class="ve_tit">HTML4 기본 레이아웃</h3>
+	<section class="view_editor edit_code mt_xxl" data-target="html/10-structure/10.1.html4_document_layout.html">
+		<h2 class="ve_tit">HTML4 기본 레이아웃</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.1.html4_document_basic.html">
-		<h3 class="ve_tit">HTML4 콘텐츠 기본 구조1</h3>
+	<section class="view_editor edit_code mt_xxl" data-target="html/10-structure/10.1.html4_document_basic.html">
+		<h2 class="ve_tit">HTML4 콘텐츠 기본 구조1</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
-	</section>
 
-	<section class="mt_s indent">
-		<h2 class="sound_only">설명</h2>
-		<div class="line_code">
-			위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
-			<p class="mt_sm t_green">
-				<span>1. HTML</span><br>
-				<span class="indent">1.1 HTML 이란?</span>
-			</p>
+		<div class="mt_s indent">
+			<h3 class="sound_only">설명</h3>
+			<div class="line_code">
+				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
+				<p class="mt_sm t_green">
+					<span>1. HTML</span><br>
+					<span class="indent">1.1 HTML 이란?</span>
+				</p>
+			</div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.1.html4_document_basic2.html">
-		<h3 class="ve_tit">HTML4 콘텐츠 기본 구조2</h3>
+
+	<section class="view_editor edit_code mt_xxl" data-target="html/10-structure/10.1.html4_document_basic2.html">
+		<h2 class="ve_tit">HTML4 콘텐츠 기본 구조2</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
-	</section>
 
-	<section class="mt_s indent">
-		<h2 class="sound_only">설명</h2>
-		<div class="line_code">
-			위와 같이 새로운 섹션을 정의할 때 <code>&lt;div&gt;</code> 요소가 꼭 필요한 것은 아닙니다. 단순히 HTML 제목 요소만 있으면 새로운 섹션이 시작됨을 자동으로 암시해 줍니다.<br>
-			위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
-			<p class="mt_sm t_green">
-				<span>1. HTML</span><br>
-				<span class="indent">1.1 HTML 이란?</span><br>
-				<span class="indent">1.2 HTML 기본구조</span><br>
-				<span>2. CSS</span>
-			</p>
+		<div class="mt_s indent">
+			<h3 class="sound_only">설명</h3>
+			<div class="line_code">
+				위와 같이 새로운 섹션을 정의할 때 <code>&lt;div&gt;</code> 요소가 꼭 필요한 것은 아닙니다. 단순히 HTML 제목 요소만 있으면 새로운 섹션이 시작됨을 자동으로 암시해 줍니다.<br>
+				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
+				<p class="mt_sm t_green">
+					<span>1. HTML</span><br>
+					<span class="indent">1.1 HTML 이란?</span><br>
+					<span class="indent">1.2 HTML 기본구조</span><br>
+					<span>2. CSS</span>
+				</p>
+			</div>
 		</div>
 	</section>
+
