--- a/assets/01-html/11-models/models.html
+++ b/assets/01-html/11-models/models.html
@@ -246,14 +246,14 @@
 			</p>
 		</article>
 
-		<article class="view_editor edit_code mt_l" data-target="html/11-models/11.1.details.html">
+		<article class="view_editor edit_code mt_xl" data-target="html/11-models/11.1.details.html">
 			<h3 class="ve_tit">예제</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
 
-		<article class="reference_box mt_l">
+		<article class="reference_box mt_xl">
 			<h2 class="tit">참조</h2>
 			<ul class="link_lst">
 				<li class="reference"><a href="https://www.w3.org/TR/html51/semantics.html#the-details-element" target="_blank" class="fas" title="새창열림">W3C details specification</a></li>
@@ -261,7 +261,7 @@
 			</ul>
 		</article>
 
-		<aside class="browser_support mt_l" data-tit="details">
+		<aside class="browser_support mt_xl" data-tit="details">
 			<ul>
 				<li class="ie false">지원안함</li>
 				<li class="edge false">지원안함</li>
