--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -15,7 +15,7 @@
 		</p>
 	</blockquote>
 
-	<section class="ol_lst mt_xl">
+	<section class="ol_lst mt_xxl">
 		<h2 class="sound_only">기능 설명</h2>
 		<h2>html 설명</h2>
 		<ol class="indent mt_s">
@@ -32,7 +32,7 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_xl" data-target="html/01-htmlStart/1.1.html_basic.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/01-htmlStart/1.1.html_basic.html">
 		<h2 class="ve_tit">HTML 기본구조</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
