--- a/assets/01-html/02-blockInline/02-div_block.html
+++ b/assets/01-html/02-blockInline/02-div_block.html
@@ -13,7 +13,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/02-blockInline/2.2.div_block.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/02-blockInline/2.2.div_block.html">
 		<h2 class="ve_tit">div 구조 예시</h2>
 		<div class="uk_gist_code_box indent mt_m" data-tit="div elements">
 				<textarea readonly="readonly">
