--- a/assets/01-html/02-blockInline/05-element_nesting.html
+++ b/assets/01-html/02-blockInline/05-element_nesting.html
@@ -10,7 +10,7 @@
 		<p>요소를 다른 요소의 안에 놓을 수 있습니다. 이것을 <b>중첩(nesting)</b>이라고 부릅니다.</p>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/02-blockInline/2.5.element_nesting1.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/02-blockInline/2.5.element_nesting1.html">
 		<h2 class="ve_tit">요소 중첩의 올바른 예</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="Correct example of element nesting">
 			<textarea readonly="readonly">
@@ -21,7 +21,7 @@
 		</div>
 	</section>
 
-	<blockquote class="uk_note mt_xl" role="note">
+	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>마크업 시 요소가 적절히 중첩되었는지 확인할 필요가 있습니다.</p>
 		<p>
@@ -33,7 +33,7 @@
 		<p>다음은 잘못된 예제입니다.</p>
 	</blockquote>
 
-	<section class="view_editor ex_code ex_wrong mt_xl" data-target="html/02-blockInline/2.5.element_nesting2.html">
+	<section class="view_editor ex_code ex_wrong mt_xxl" data-target="html/02-blockInline/2.5.element_nesting2.html">
 		<h2 class="ve_tit">요소 중첩의 잘못된 예</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="Incorrect example of element nesting">
 			<textarea readonly="readonly">
