--- a/assets/01-html/04-grouping/11-figcaption_element.html
+++ b/assets/01-html/04-grouping/11-figcaption_element.html
@@ -12,7 +12,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.11.figcaption_element/4.11.figcaption_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/04-grouping/4.11.figcaption_element/4.11.figcaption_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="figcaption element">
 			<textarea readonly="readonly">
