--- a/assets/01-html/04-grouping/12-pre_element.html
+++ b/assets/01-html/04-grouping/12-pre_element.html
@@ -17,7 +17,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.12.pre_element/4.12.pre_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.12.pre_element/4.12.pre_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
