--- a/assets/01-html/04-grouping/13-blockquote_element.html
+++ b/assets/01-html/04-grouping/13-blockquote_element.html
@@ -13,18 +13,18 @@
 		</p>
 	</section>
 
-	<section class="txt_ex mt_xl">
+	<section class="txt_ex mt_xxl">
 		<h2>4.13.1. blockquote 속성</h2>
 		<!--<h2>blockquote 속성</h2>-->
 
-		<article class="txt_ex indent_max mt_m">
+		<article class="txt_ex indent_max mt_ml">
 			<h3 class="ml_mn">[cite] <span class="t_blue">&lt;blockquote cite="URL"&gt;</span></h3>
 
 			<p class="mt_s">URL은 인용된 정보에 대한 원본 문서 또는 메시지를 나타냅니다. 이 속성은 인용문의 컨텍스트나 참조를 설명하는 정보입니다.</p>
 		</article>
 	</section>
 
-	<section class="view_editor ex_code mt_xl">
+	<section class="view_editor ex_code mt_xxl">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="blockquote element">
 			<textarea readonly="readonly">
@@ -55,7 +55,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element3.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element3.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
