--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -9,12 +9,25 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			해당 요소는 하나의 페이지에서 다른 페이지를 연결할 때 사용하는 하이퍼링크(hyperlink)를 정의할 때 사용합니다.<br>
-			이러한 <code>&lt;a&gt;</code> 요소에서 가장 중요한 속성은 바로 링크(link)의 목적지를 가리키는 href(Hyper text REFerence) 속성입니다.<br>
-			따라서 href 속성이 없다면, target, download, rel, rev, hreflang, type, referrerpolicy 속성들도 사용할 수 없습니다.<br>
+			<code>&lt;a&gt;</code> 요소에서 가장 중요한 속성은 바로 링크(link)의 목적지를 가리키는 <mark><code>href(Hyper text REFerence)</code></mark> 속성입니다.<br>
+			따라서 <code>href</code> 속성이 없다면, <code>target</code>, <code>download</code>, <code>rel</code>, <code>rev</code>, <code>hreflang</code>, <code>type</code>, <code>referrerpolicy</code> 속성들도 사용할 수 없습니다.<br>
 			링크된 페이지는 보통 브라우저의 현재 윈도우에 표시되며, 이것은 target 속성으로 변경할 수 있습니다.<br>
-			<mark>HTML5에서는 해당 요소의 charset, coords, name, rev, shape 속성을 더 이상 지원하지 않습니다.</mark>
 		</p>
-		<div class="line_code mt_s">
+		<ol class="indent mt_ms">
+			<li class="line_code font14">
+				<strong class="mb_sm">링크는 모든 브라우저에서 다음과 같은 기본 스타일을 가지게 됩니다.</strong>
+				<p>아직 방문하지 않은 링크(unvisited link) : 밑줄, 파란색(blue)</p>
+				<p>방문했던 링크(visited link) : 밑줄, 보라색(purple)</p>
+				<p>활성화된(현재 마우스가 클릭하고 있는) 링크(active link) : 밑줄, 빨간색(red)</p>
+			</li>
+			<li class="line_code font14 mt_m">
+				<strong class="mb_sm">HTML5에서 변경된 사항</strong>
+				<p>HTML 4.01에서 <code>&lt;a&gt;</code> 요소는 하이퍼링크(hyperlink)로도, 앵커(anchor)로도 모두 사용할 수 있었습니다.</p>
+				<p>하지만 HTML5에서는 언제나 하이퍼링크로만 사용되며, href 속성이 없는 경우에는 나중에 추가될지도 모르는 하이퍼링크를 위한 표시(placeholder) 역할만을 할 뿐입니다.</p>
+				<p>HTML5에서는 해당 요소의 <code>charset</code>, <code>coords</code>, <code>name</code>, <code>rev</code>, <code>shape</code> 속성을 더 이상 지원하지 않습니다.</p>
+			</li>
+		</ol>
+		<div class="line_code mt_ms">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="a element CSS default">
 				<textarea readonly="readonly">
@@ -29,19 +42,6 @@
 				</textarea>
 			</div>
 		</div>
-		<ol class="mt_m">
-			<li class="line_code font14">
-				<strong class="mb_sm">링크는 모든 브라우저에서 다음과 같은 기본 스타일을 가지게 됩니다.</strong>
-				<p>아직 방문하지 않은 링크(unvisited link) : 밑줄, 파란색(blue)</p>
-				<p>방문했던 링크(visited link) : 밑줄, 보라색(purple)</p>
-				<p>활성화된(현재 마우스가 클릭하고 있는) 링크(active link) : 밑줄, 빨간색(red)</p>
-			</li>
-			<li class="line_code font14 mt_m">
-				<strong class="mb_sm">HTML5에서 변경된 사항</strong>
-				<p>HTML 4.01에서 <code>&lt;a&gt;</code> 요소는 하이퍼링크(hyperlink)로도, 앵커(anchor)로도 모두 사용할 수 있었습니다.</p>
-				<p>하지만 HTML5에서는 언제나 하이퍼링크로만 사용되며, href 속성이 없는 경우에는 나중에 추가될지도 모르는 하이퍼링크를 위한 표시(placeholder) 역할만을 할 뿐입니다.</p>
-			</li>
-		</ol>
 	</section>
 
 	<section class="txt_ex mt_xxl">
