--- a/assets/01-html/08-table/01-table_element.html
+++ b/assets/01-html/08-table/01-table_element.html
@@ -46,14 +46,14 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.1.table_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/08-table/8.1.table_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="table">
+	<aside class="browser_support mt_xxl" data-tit="table">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
