--- a/assets/01-html/08-table/08-tr_element.html
+++ b/assets/01-html/08-table/08-tr_element.html
@@ -12,9 +12,9 @@
 			<code>&lt;tr&gt;</code> 요소는 하나 이상의 <code>&lt;th&gt;</code> 요소(header cell)나 <code>&lt;td&gt;</code> 요소(data cell)를 포함할 수 있습니다.
 		</p>
 		<p class="mt_s">
-			HTML5에서는 <code>&lt;tr&gt;</code> 요소의 align, bgcolor, char, charoff, valign 속성을 더 이상 지원하지 않습니다.
+			HTML5에서는 <code>&lt;tr&gt;</code> 요소의 <code>align</code>, <code>bgcolor</code>, <code>char</code>, <code>charoff</code>, <code>valign</code> 속성을 더 이상 지원하지 않습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="tr element CSS default">
 				<textarea readonly="readonly">
@@ -28,14 +28,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.8.tr_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/08-table/8.8.tr_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="tr">
+	<aside class="browser_support mt_xxl" data-tit="tr">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
