--- a/assets/01-html/09-forms/03-input_element_part3.html
+++ b/assets/01-html/09-forms/03-input_element_part3.html
@@ -39,19 +39,19 @@
 		<!-- autofocus -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[autofocus] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input autofocus&gt;</span></h3>
-			<p class="mt_s">
-				<code>&lt;input&gt;</code> 태그의 autofocus 속성은 페이지가 로드될 때 자동으로 포커스(focus)가 &lt;input&gt; 요소로 이동됨을 명시합니다.
+			<p class="mt_ms">
+				<code>&lt;input&gt;</code> 태그의 <code>autofocus</code> 속성은 페이지가 로드될 때 자동으로 포커스(focus)가 <code>&lt;input&gt;</code> 요소로 이동됨을 명시합니다.
 			</p>
 			<p class="mt_s">
-				autofocus 속성은 불리언(boolean) 속성입니다.
+				<code>autofocus</code> 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_autofocus.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_autofocus.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="autofocus">
+			<aside class="browser_support mt_m" data-tit="autofocus">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">45.0</p>
@@ -64,15 +64,15 @@
 		<!-- list -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[list] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input list="datalist id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소에서 사용하기 위해 미리 정의해 놓은 옵션들을 포함하고 있는 <code>&lt;datalist&gt;</code> 요소를 명시합니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_list.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_list.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="list">
+			<aside class="browser_support mt_m" data-tit="list">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">45.0</p>
@@ -85,7 +85,7 @@
 		<!-- max -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[max] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="date | datetime | datetime-local | month | number | range | time | week" max="숫자|날짜"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 max 속성은 <code>&lt;input&gt;</code> 요소의 최대값을 명시합니다.<br>
 				max 속성은 min 속성과 함께 <code>&lt;input&gt;</code> 요소에서 입력값의 허용 범위를 설정하는데 사용됩니다.<br>
 				min 속성과 max 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
@@ -103,12 +103,12 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_max.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_max.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="max">
+			<aside class="browser_support mt_m" data-tit="max">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">45.0</p>
@@ -121,7 +121,7 @@
 		<!-- min -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[min] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="date | datetime | datetime-local | month | number | range | time | week" max="숫자|날짜"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				min 속성은 <code>&lt;input&gt;</code> 요소의 최소값을 명시합니다.<br>
 				max 속성은 min 속성과 함께 <code>&lt;input&gt;</code> 요소에서 입력값의 허용 범위를 설정하는데 사용됩니다.<br>
 				min 속성과 max 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
@@ -139,12 +139,12 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_min.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_min.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="min">
+			<aside class="browser_support mt_m" data-tit="min">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">45.0</p>
@@ -157,15 +157,15 @@
 		<!-- maxlength -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[maxlength] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input maxlength="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소에서 허용되는 최대 문자수를 명시합니다(기본값은 524,288).
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_maxlength.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_maxlength.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="maxlength">
+			<aside class="browser_support mt_m" data-tit="maxlength">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">지원</p>
@@ -178,15 +178,15 @@
 		<!-- minlength -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[minlength] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input minlength="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소에서 허용되는 최소 문자수를 명시합니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_minlength.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_minlength.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="minlength">
+			<aside class="browser_support mt_m" data-tit="minlength">
 				<p class="ie">지원</p>
 				<p class="edge">지원</p>
 				<p class="chrome">지원</p>
@@ -199,19 +199,19 @@
 		<!-- step -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[step] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="date | datetime | datetime-local | month | number | range | time | week" step="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 태그의 step 속성은 <code>&lt;input&gt;</code> 요소에 입력할 수 있는 숫자들 사이의 간격을 명시합니다.<br>
 				만약 step 속성값이 2라면, <code>&lt;input&gt;</code> 요소에 입력할 수 있는 숫자는 ..., -4, -2, 0, 2, 4, ... 등이 됩니다.<br>
 				step 속성은 min, max 속성과 함께 <code>&lt;input&gt;</code> 요소에 입력할 수 있는 유효한 값의 범위를 설정하는데 사용할 수 있습니다.<br>
 				step 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				date, datetime, datetime-local, month, number, range, time, week
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_step.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_step.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="step">
+			<aside class="browser_support mt_m" data-tit="step">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">6.0</p>
@@ -224,7 +224,7 @@
 		<!-- multiple -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[multiple] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="email | file" multiple&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 multiple 속성은 <code>&lt;input&gt;</code> 요소에 사용자가 둘 이상의 값을 입력할 수 있음을 명시합니다.<br>
 				multiple 속성이 제대로 동작하는 type 속성에는 email, file이 있습니다.<br>
 				<code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;email&quot;인 경우에는 전자 메일 사이에 콤마(,)를 추가하여 여러 전자 메일 주소를 동시에 입력할 수 있으며,
@@ -234,12 +234,12 @@
 				multiple 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_multiple.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_multiple.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="multiple">
+			<aside class="browser_support mt_m" data-tit="multiple">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">6.0</p>
@@ -252,7 +252,7 @@
 		<!-- pattern -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[pattern] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input pattern="정규 표현식"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				pattern 속성은 폼 제출 시 <code>&lt;input&gt;</code> 요소의 값을 검사할 때 사용될 정규 표현식(regular expression)을 명시합니다.<br>
 				이때 전역 속성인 title 속성을 사용하여 정규 표현식에 간단한 설명을 추가함으로써 사용자가 정확한 값을 입력할 수 있도록 도움을 줄 수 있습니다.<br>
 				<code>&lt;input&gt;</code> 요소의 pattern속성을 사용하면 JavaScript를 사용하지 않고도 기본 데이터 유효성 검사를 추가 할 수 있습니다.<br>
@@ -277,16 +277,16 @@
 					</li>
 				</ol>
 			</div>
-			<p class="mt_s">
+			<p class="mt_ms">
 				pattern 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				date, email, password, search, tel, text, url
 			</p>
-			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.3.input_element_pattern.html">
+			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_pattern.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="pattern">
+			<aside class="browser_support mt_m" data-tit="pattern">
 				<p class="ie">10+</p>
 				<p class="edge">12.0</p>
 				<p class="chrome">45.0</p>
@@ -299,7 +299,7 @@
 		<!-- dirname -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[dirname] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input name="이름" dirname="이름.dir"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 dirname 속성은 폼 데이터(form data)가 서버로 제출될 때
 				서버로 보낼 입력 필드의 텍스트 방향성(text directionality)을 저장할 이름을 명시합니다.<br>
 				dirname 속성값은 언제나 <code>&lt;input&gt;</code> 요소의 name 속성값 뒤에 “.dir”를 추가한 값이 됩니다.
@@ -312,7 +312,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="dirname">
+			<aside class="browser_support mt_m" data-tit="dirname">
 				<p class="ie">10+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">6.0</p>
@@ -325,7 +325,7 @@
 		<!-- form -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input form="form id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 <code>&lt;input&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
@@ -338,7 +338,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="form">
+			<aside class="browser_support mt_m" data-tit="form">
 				<p class="ie false">지원안함</p>
 				<p class="edge false">지원안함</p>
 				<p class="chrome">10.0</p>
@@ -351,7 +351,7 @@
 		<!-- formaction -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[formaction] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit | image" formaction="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 입력 데이터를 처리할 파일의 URL을 명시합니다.<br>
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot; 또는 &quot;image&quot;인 경우에만 사용 가능)<br>
 				formaction 속성은 <code>&lt;form&gt;</code> 요소의 action 속성값을 재정의(overriding)합니다.
@@ -367,7 +367,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="formaction">
+			<aside class="browser_support mt_m" data-tit="formaction">
 				<p class="ie">10+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">9.0</p>
@@ -380,7 +380,7 @@
 		<!-- formenctype -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[formenctype] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit | image" formenctype="속성값"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 해당 데이터가 인코딩(encoding)되는 방식을 명시합니다.<br>
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot; 또는 &quot;image&quot;이면서,
 				<code>&lt;form&gt;</code> 요소의 method 속성값이 &quot;post&quot;인 경우에만 사용할 수 있습니다.<br>
@@ -411,7 +411,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="formenctype">
+			<aside class="browser_support mt_m" data-tit="formenctype">
 				<p class="ie">10+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">9.0</p>
@@ -424,7 +424,7 @@
 		<!-- formmethod -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[formmethod] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit | image" formenctype="get | post"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 사용할 HTTP 메소드를 명시합니다.<br>
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot; 또는 &quot;image&quot;인 경우에만 사용할 수 있으며,
 				<code>&lt;form&gt;</code> 요소의 method 속성값을 재정의(overriding)합니다.
@@ -468,7 +468,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="formmethod">
+			<aside class="browser_support mt_m" data-tit="formmethod">
 				<p class="ie">10+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">9.0</p>
@@ -481,7 +481,7 @@
 		<!-- formnovalidate -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[formnovalidate] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit" formnovalidate&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 해당 데이터의 유효성 검사를 하지 않음을 명시합니다.<br>
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot;인 경우에만 사용할 수 있으며,
 				<code>&lt;form&gt;</code> 요소의 novalidate 속성값을 재정의(overriding)합니다.)
@@ -500,7 +500,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="formnovalidate">
+			<aside class="browser_support mt_m" data-tit="formnovalidate">
 				<p class="ie">10+</p>
 				<p class="edge">지원</p>
 				<p class="chrome">6.0</p>
@@ -513,7 +513,7 @@
 		<!-- formtarget -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[formtarget] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input formtarget="_blank | _self | _parent | _top | 프레임 이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출된 후 받는 응답(response) 데이터를 어디에 표시할 지를 명시합니다.<br>
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;submit&quot; 또는 &quot;image&quot;인 경우에만 사용 가능)
 			</p>
@@ -527,7 +527,7 @@
 					</form>
 				</textarea>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="formtarget">
+			<aside class="browser_support mt_m" data-tit="formtarget">
 				<p class="ie">11+</p>
 				<p class="edge">13.0</p>
 				<p class="chrome">45.0</p>
