--- a/assets/01-html/09-forms/11-progress_element.html
+++ b/assets/01-html/09-forms/11-progress_element.html
@@ -46,7 +46,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="progress">
+	<aside class="browser_support mt_xxl" data-tit="progress">
 		<ul>
 			<li class="ie">10+</li>
 			<li class="edge">지원</li>
