--- a/assets/01-html/09-forms/12-meter_element.html
+++ b/assets/01-html/09-forms/12-meter_element.html
@@ -87,14 +87,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.12.meter_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.12.meter_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="meter">
+	<aside class="browser_support mt_xxl" data-tit="meter">
 		<ul>
 			<li class="ie false">지원안함</li>
 			<li class="edge">지원</li>
