--- a/assets/01-html/10-structure/02-html5_document.html
+++ b/assets/01-html/10-structure/02-html5_document.html
@@ -19,32 +19,32 @@
 		</p>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_layout.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/10-structure/10.2.html5_document_layout.html">
 		<h2 class="ve_tit">HTML5 기본 레이아웃</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_basic.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/10-structure/10.2.html5_document_basic.html">
 		<h2 class="ve_tit">HTML5 콘텐츠 기본 구조</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
-	</section>
 
-	<section class="mt_s indent">
-		<h2 class="sound_only">설명</h2>
-		<div class="line_code">
-			위에 있는 HTML 코드에선 가장 윗 단계에 두 개의 섹션이 정의되었으며,
-			첫 번째 섹션에선 세 개의 하위 섹션이 존재합니다.<br>
-			그래서 위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
-			<p class="mt_sm t_green">
-				<span>1. HTML</span><br>
-				<span class="indent">1.1 HTML 이란?</span><br>
-				<span class="indent">1.2 HTML 기본구조</span><br>
-				<span class="indent">1.3 광고 구역 (aside)</span>
-			</p>
+		<div class="mt_s indent">
+			<h3 class="sound_only">설명</h3>
+			<div class="line_code">
+				위에 있는 HTML 코드에선 가장 윗 단계에 두 개의 섹션이 정의되었으며,
+				첫 번째 섹션에선 세 개의 하위 섹션이 존재합니다.<br>
+				그래서 위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
+				<p class="mt_sm t_green">
+					<span>1. HTML</span><br>
+					<span class="indent">1.1 HTML 이란?</span><br>
+					<span class="indent">1.2 HTML 기본구조</span><br>
+					<span class="indent">1.3 광고 구역 (aside)</span>
+				</p>
+			</div>
 		</div>
 	</section>
 
@@ -103,12 +103,12 @@
 		</p>
 		<div class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_definition1.html">
 			<h3 class="ve_tit">예제1</h3>
-			<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="mt_s">
-			<h2 class="sound_only">설명</h2>
+		<div class="indent mt_s">
+			<h3 class="sound_only">설명</h3>
 			<div class="line_code">
 				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
 				<p class="mt_sm t_green">
@@ -123,13 +123,13 @@
 		</div>
 
 		<div class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_definition2.html">
-			<h3 class="ve_tit">예제2</h3>
-			<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h2 class="ve_tit">예제2</h2>
+			<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="mt_s">
-			<h2 class="sound_only">설명</h2>
+		<div class="indent mt_s">
+			<h3 class="sound_only">설명</h3>
 			<div class="line_code">
 				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
 				<p class="mt_sm t_green">
@@ -144,13 +144,13 @@
 		</div>
 
 		<div class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_definition3.html">
-			<h3 class="ve_tit">예제3</h3>
-			<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h2 class="ve_tit">예제3</h2>
+			<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
-		<div class="mt_s">
-			<h2 class="sound_only">설명</h2>
+		<div class="indent mt_s">
+			<h3 class="sound_only">설명</h3>
 			<div class="line_code">
 				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
 				<p class="mt_sm t_green">
@@ -199,7 +199,7 @@
 			</div>
 		</div>
 		<div class="mt_s">
-			<h2 class="sound_only">설명</h2>
+			<h3 class="sound_only">설명</h3>
 			<div class="line_code">
 				위의 보기에선 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
 				<p class="mt_sm t_green">
