--- a/assets/01-html/10-structure/03-frameset_document.html
+++ b/assets/01-html/10-structure/03-frameset_document.html
@@ -17,7 +17,7 @@
 			더 이상 지원되지 않는 <code>&lt;frame&gt;</code> 요소를 사용하면서 HTML 유효성 검사를 통과하기 위해서는 다음의 두 가지 방법처럼 DOCTYPE을 선언해야 합니다.<br>
 		</p>
 
-		<div class="uk_gist_code_box mt_m" data-tit="frameset document">
+		<div class="uk_gist_code_box mt_ms" data-tit="frameset document">
 				<textarea readonly="readonly">
 					<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 					<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
@@ -25,8 +25,9 @@
 		</div>
 	</section>
 
-	<section class="txt_ex mt_l">
-		<h2 class="sound_only">프레임셋 속성</h2>
+	<section class="txt_ex mt_xxl">
+		<!--<h2 class="sound_only">프레임셋 속성</h2>-->
+		<h2>10.3.1. 프레임셋 속성</h2>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cols 속성] - <span class="t_blue">픽셀, %, *</span></h3>
@@ -43,10 +44,11 @@
 				HTML5에서는 더 이상 지원하지 않습니다.
 			</p>
 		</article>
+	</section>
 
-		<article class="view_editor ex_code mt_l">
-			<h3 class="ve_tit">예제</h3>
-			<div class="uk_gist_code_box indent mt_ms" data-tit="frameset document">
+	<section class="view_editor ex_code mt_xxl">
+		<h2 class="ve_tit">예제</h2>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="frameset document">
 			<textarea readonly="readonly">
 				<frameset cols="33%,*,33%">
 					<frame name="left" src="/html/intro"/>
@@ -54,8 +56,7 @@
 					<frame name="right" src="/php/intro"/>
 				</frameset>
 			</textarea>
-			</div>
-		</article>
+		</div>
 	</section>
 
 
